--- a/vistas/publico/detalle_zapato.html
+++ b/vistas/publico/detalle_zapato.html
@@ -267,7 +267,7 @@
                         </h6>
                     </div>
 
-                    <div class="contenedorPrecioCalificacion d-flex flex-row justify-content-start mt-4 mb-5">
+                    <div class="contenedorPrecioCalificacion d-flex flex-row justify-content-start mt-4 mb-4">
                         <h3 class="m-0 p-0 titillium-web-bold">
                             $120
                         </h3>
@@ -302,6 +302,18 @@
                                 que desean destacar con confianza en cualquier ocasión.
                             </p>
                         </div>
+                    </div>
+
+                    <div class="contenedorTallas d-flex flex-column mt-4 shadow">
+                        <div class="tituloTallas">
+                            <h4 class="m-0 p-0 titillium-web-bold">
+                                Tallas
+                            </h4>
+                        </div>
+                        <div class="tallas mt-2">
+
+                        </div>
+
                     </div>
 
                 </div>
