Responsive terminado - detalles-zapato

--- a/vistas/publico/detalle_zapato.html
+++ b/vistas/publico/detalle_zapato.html
@@ -25,8 +25,8 @@
 <body>
     <!-- *Contenido principal del documento -->
     <main class="position-relative">
-        <div class="contenedorTotal d-flex flex-column"> <!-- *Contenedor total -->
-            <div class="contenedor1 d-flex flex-row flex-wrap justify-content-between mt-5"> <!-- *Contenedor 1 -->
+        <div class="contenedorTotal d-flex flex-column mt-5"> <!-- *Contenedor total -->
+            <div class="contenedor1"> <!-- *Contenedor 1 -->
                 <div class="columna1 d-flex flex-column col-lg-5 col-md-6 col-sm-12 col-12 mb-5"> <!-- *Columna 1 -->
                     <div class="contenedorImg mb-5"> <!-- *Contenedor de la img -->
                         <img src="../../recursos/imagenes/airJordan1.svg" class="imgShoe">
@@ -688,7 +688,7 @@
                     </div>
 
                     <div
-                        class="contenedorBotonCantidad mt-5 pt-4 col-12 d-flex flex-column justify-content-center align-items-center">
+                        class="contenedorBotonCantidad mt-5 pt-4 col-12 d-flex flex-column justify-content-center align-items-center mb-5">
 
                         <button type="button" id="agregarCarritoBtn"
                             class="btn btn-primary shadow bg-color-5blue col-lg-7 col-md-12 col-sm-12 col-12">
@@ -697,7 +697,7 @@
                             </h5>
                         </button>
 
-                        <h6 class="m-0 p-0 titillium-web-regular clgr2 mt-3">
+                        <h6 class="m-0 p-0 titillium-web-regular clgr2 mt-3 ">
                             Cantidad todavía disponible: 25 ejemplares
                         </h6>
 
