Sweet alert terminado - detalles zapato terminado

--- a/vistas/publico/detalle_zapato.html
+++ b/vistas/publico/detalle_zapato.html
@@ -690,7 +690,7 @@
                     <div
                         class="contenedorBotonCantidad mt-5 pt-4 col-12 d-flex flex-column justify-content-center align-items-center mb-5">
 
-                        <button type="button" id="agregarCarritoBtn"
+                        <button type="button" id="agregarCarritoBtn" onclick="AddCarrito()"
                             class="btn btn-primary shadow bg-color-5blue col-lg-7 col-md-12 col-sm-12 col-12">
                             <h5 class="titillium-web-regular m-0 p-0 pt-2 pb-2">
                                 Agregar al carrito
@@ -700,7 +700,6 @@
                         <h6 class="m-0 p-0 titillium-web-regular clgr2 mt-3 ">
                             Cantidad todavía disponible: 25 ejemplares
                         </h6>
-
                     </div>
 
                 </div>
