Terminado finalmente detalle zapato - carrusel integrado

--- a/vistas/publico/detalle_zapato.html
+++ b/vistas/publico/detalle_zapato.html
@@ -705,8 +705,123 @@
                 </div>
             </div>
 
-            <div class="contenedor2 d-flex flex-row ">
-                <!--Aqui va el carrusel de recomendados-->
+            <div class="contenedor2 d-flex flex-column mt-5">
+                <!--*Slider de recomendados-->
+                <h1 class="titillium-web-regular text35 mx-5 text-black mt-3 mb-1"> También podría gustarte</h1>
+                <div class="containerCards d-flex flex-nowrap">
+                    <div class="card col-4" id="cardC">
+                        <a href="/vistas/publico/detalle_zapato.html" class="text15">
+                            <div class="image-wrapper2">
+                                <img src="../../recursos/imagenes/airJordan1.svg" alt="...">
+                            </div>
+                            <div class="lineImgC"></div>
+                            <div class="card-body">
+                                <div class="d-flex flex-row justify-content-between">
+                                    <div class="column1 ps-3">
+                                        <h1 class="titillium-web-bold text25 text-black">Air Jordan 3
+                                            <p class="titillium-web-extralight text18 clgr3 mt-2">Zapato UNISEX</p>
+                                        </h1>
+
+                                        <div class="d-flex flex-row align-items-center mt-2 ">
+                                            <img src="../../recursos/imagenes/icons/starFill.svg" alt="">
+                                            <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar">5</p>
+                                        </div>
+                                    </div>
+
+                                    <div class="column2 align-items-center">
+                                        <p class="titillium-web-extralight text18 mb-5 clgr3">5 colores</p>
+                                        <h1 class="titillium-web-bold text25 text-black"> $285</h1>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="card col-4" id="cardC">
+                        <a href="/vistas/publico/detalle_zapato.html" class="text15">
+                            <div class="image-wrapper2">
+                                <img src="../../recursos/imagenes/airJordan1.svg" alt="...">
+                            </div>
+                            <div class="lineImgC"></div>
+                            <div class="card-body">
+                                <div class="d-flex flex-row justify-content-between">
+                                    <div class="column1 ps-3">
+                                        <h1 class="titillium-web-bold text25 text-black">Air Jordan 3
+                                            <p class="titillium-web-extralight text18 clgr3 mt-2">Zapato UNISEX</p>
+                                        </h1>
+
+                                        <div class="d-flex flex-row align-items-center mt-2 ">
+                                            <img src="../../recursos/imagenes/icons/starFill.svg" alt="">
+                                            <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar">5</p>
+                                        </div>
+                                    </div>
+
+                                    <div class="column2 align-items-center">
+                                        <p class="titillium-web-extralight text18 mb-5 clgr3">5 colores</p>
+                                        <h1 class="titillium-web-bold text25 text-black"> $285</h1>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="card col-4" id="cardC">
+                        <a href="/vistas/publico/detalle_zapato.html" class="text15">
+                            <div class="image-wrapper2">
+                                <img src="../../recursos/imagenes/airJordan1.svg" alt="...">
+                            </div>
+                            <div class="lineImgC"></div>
+                            <div class="card-body">
+                                <div class="d-flex flex-row justify-content-between">
+                                    <div class="column1 ps-3">
+                                        <h1 class="titillium-web-bold text25 text-black">Air Jordan 3
+                                            <p class="titillium-web-extralight text18 clgr3 mt-2">Zapato UNISEX</p>
+                                        </h1>
+
+                                        <div class="d-flex flex-row align-items-center mt-2 ">
+                                            <img src="../../recursos/imagenes/icons/starFill.svg" alt="">
+                                            <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar">5</p>
+                                        </div>
+                                    </div>
+
+                                    <div class="column2 align-items-center">
+                                        <p class="titillium-web-extralight text18 mb-5 clgr3">5 colores</p>
+                                        <h1 class="titillium-web-bold text25 text-black"> $285</h1>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="card col-4" id="cardC">
+                        <a href="/vistas/publico/detalle_zapato.html" class="text15">
+                            <div class="image-wrapper2">
+                                <img src="../../recursos/imagenes/airJordan1.svg" alt="...">
+                            </div>
+                            <div class="lineImgC"></div>
+                            <div class="card-body">
+                                <div class="d-flex flex-row justify-content-between">
+                                    <div class="column1 ps-3">
+                                        <h1 class="titillium-web-bold text25 text-black">Air Jordan 3
+                                            <p class="titillium-web-extralight text18 clgr3 mt-2">Zapato UNISEX</p>
+                                        </h1>
+
+                                        <div class="d-flex flex-row align-items-center mt-2 ">
+                                            <img src="../../recursos/imagenes/icons/starFill.svg" alt="">
+                                            <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar">5</p>
+                                        </div>
+                                    </div>
+
+                                    <div class="column2 align-items-center">
+                                        <p class="titillium-web-extralight text18 mb-5 clgr3">5 colores</p>
+                                        <h1 class="titillium-web-bold text25 text-black"> $285</h1>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="pb-3"></div>
             </div>
         </div>
     </main>
