--- a/vistas/privado/zapatos.html
+++ b/vistas/privado/zapatos.html
@@ -37,7 +37,7 @@
                         <!--Boton para los zapatos registrados-->
                         <button class="nav-link boton-cambiar-color" data-bs-toggle="tab" id="registrados-tab"
                             type="button" data-bs-target="#registrados" role="tab" aria-controls="registrados"
-                            aria-selected="true" onclick="showZapatos(this)">
+                            aria-selected="true" onclick="showpatos(this)">
                             Registrados
                         </button>
                     </li>
@@ -280,24 +280,19 @@
                                     <div class="col md-6 mt-3">
                                         <label for="Descripcion" class="form-label">Descripcion del zapato</label>
                                         <textarea class="form-control" id="Descripcion"
+                                        placeholder="Ingresa una descripcion para el producto" required
                                             rows="3"></textarea>
                                     </div>
                                     <div class="contenedorBotones1A">
                                         <button type="button" onclick="returnBack()"
                                             class="btn btn2 btn-primary ms-2 shadow text18 titillium-web-regular">Cancelar</button>
                                         <button class="btn btn3 btn-primary shadow ms-4 text18 titillium-web-regular"
-                                            onclick="addSave()" type="submit">Agregar</button>
+                                            onclick="showPaso2()" type="submit">Siguiente</button>
                                     </div>
                                 </form>
                             </div>
                         </div>
-
-
-
-
-
                     </div>
-
                     <!-- Modal para COLORES -->
                     <!-- TODO ----------------------------COLORES MODAL------------------------------------------>
                     <div class="modal fade" id="dataModal" data-bs-backdrop="static" data-bs-keyboard="false"
