--- a/vistas/privado/zapatos.html
+++ b/vistas/privado/zapatos.html
@@ -196,7 +196,7 @@
                                     <div class="contenedorColoresScroll d-flex flex-column">
 
                                         <div class="contenedorFilaColores d-flex flex-row flex-wrap">
-                                            <div class="pastilla" ondblclick="openDetails(this)">
+                                            <div class="pastilla" ondblclick="openTallas(this)">
                                                 <h4>Rojo</h4>
                                             </div>
                                             <div class="pastilla" ondblclick="openDetails(this)">
@@ -280,7 +280,7 @@
                                     <div class="col md-6 mt-3">
                                         <label for="Descripcion" class="form-label">Descripcion del zapato</label>
                                         <textarea class="form-control" id="Descripcion"
-                                        placeholder="Ingresa una descripcion para el producto" required
+                                            placeholder="Ingresa una descripcion para el producto" required
                                             rows="3"></textarea>
                                     </div>
                                     <div class="contenedorBotones1A">
@@ -293,6 +293,7 @@
                             </div>
                         </div>
                     </div>
+
                     <!-- Modal para COLORES -->
                     <!-- TODO ----------------------------COLORES MODAL------------------------------------------>
                     <div class="modal fade" id="dataModal" data-bs-backdrop="static" data-bs-keyboard="false"
@@ -335,6 +336,131 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- Modal para Tallas -->
+                    <!-- TODO ----------------------------TALLAS MODAL------------------------------------------>
+                    <div class="modal fade" id="dataModalT" data-bs-backdrop="static" data-bs-keyboard="false"
+                        tabindex="-1" aria-labelledby="modalTitleT" aria-hidden="true">
+                        <div class="modal-dialog modal-lg modal-dialog-centered">
+                            <div class="modal-content">
+                                <!-- Encabezado del modal -->
+                                <div class="modal-header d-flex justify-content-start align-items-start">
+                                    <h1 class="modal-title fs-5 text-start" id="modalTitleT"></h1>
+                                </div>
+                                <!-- Formulario para crear o actualizar un registro -->
+                                <form id="tallasForm" name="tallasForm">
+                                    <div class="modal-body row g-3 d-flex flex-column align-items-start">
+                                        <!-- Campo de tallas -->
+                                        <div class="row-sm-4 row-md-4">
+                                            <div class="ContenedorA row-sm-10 row-md-10">
+                                                <button type="button" id="agregarBtn"
+                                                class="btn-primary btnA ms-1 titillium-web-regular"
+                                                onclick="botonCancelar()">
+                                                +</button>
+                                                <label for="tallas" class="labelT ps-3 titillium-web-semibold">Tallas</label>
+                                            </div>
+                                            <div class="ContenedorTotalT d-flex flex-row col-12">
+                                               
+                                                <div class="tallasScroll mt-2 ms-4 d-flex flex-column col-6">
+                                                    <div class="contenedorFilaTallas d-flex flex-row flex-wrap">
+                                                        <div class="cuadradoTalla">
+                                                            <h5 class="titillium-web-regular m-0 p-1 text-center">
+                                                                5
+                                                            </h5>
+                                                        </div>
+                                                        <div class="cuadradoTalla">
+                                                            <h5 class="titillium-web-regular m-0 p-1 text-center">
+                                                                30
+                                                            </h5>
+                                                        </div>
+                                                        <div class="cuadradoTalla">
+                                                            <h5 class="titillium-web-regular m-0 p-1 text-center">
+                                                                30
+                                                            </h5>
+                                                        </div>  
+                                                        <div class="cuadradoTalla">
+                                                            <h5 class="titillium-web-regular m-0 p-1 text-center">
+                                                                30
+                                                            </h5>
+                                                        </div>
+                                                        <div class="cuadradoTalla">
+                                                            <h5 class="titillium-web-regular m-0 p-1 text-center">
+                                                                30
+                                                            </h5>
+                                                        </div>
+                                                        <div class="cuadradoTalla">
+                                                            <h5 class="titillium-web-regular m-0 p-1 text-center">
+                                                                30
+                                                            </h5>
+                                                        </div>
+                                                        <div class="cuadradoTalla">
+                                                            <h5 class="titillium-web-regular m-0 p-1 text-center">
+                                                                30
+                                                            </h5>
+                                                        </div>
+                                                        <div class="cuadradoTalla">
+                                                            <h5 class="titillium-web-regular m-0 p-1 text-center">
+                                                                30
+                                                            </h5>
+                                                        </div>
+                                                        <div class="cuadradoTalla">
+                                                            <h5 class="titillium-web-regular m-0 p-1 text-center">
+                                                                30
+                                                            </h5>
+                                                        </div>
+                                                        <div class="cuadradoTalla">
+                                                            <h5 class="titillium-web-regular m-0 p-1 text-center">
+                                                                30
+                                                            </h5>
+                                                        </div>
+                                                        <div class="cuadradoTalla">
+                                                            <h5 class="titillium-web-regular m-0 p-1 text-center">
+                                                                30
+                                                            </h5>
+                                                        </div>
+                                                        <div class="cuadradoTalla">
+                                                            <h5 class="titillium-web-regular m-0 p-1 text-center">
+                                                                30
+                                                            </h5>
+                                                        </div>
+                                                        <div class="cuadradoTalla">
+                                                            <h5 class="titillium-web-regular m-0 p-1 text-center">
+                                                                30
+                                                            </h5>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="d-flex flex-column col-6 as">
+
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <!-- Botones en el pie del modal -->
+                                        <div class="modal-footer mt-5 d-flex justify-content-center align-items-center">
+                                            <div class="contenedorBotones3">
+                                                <!-- Botón para cancelar la operación -->
+                                                <button type="button" id="cancelarBtn"
+                                                    class="btn btn2 btn-primary ms-4 shadow text18 titillium-web-regular"
+                                                    onclick="botonCancelar()">
+                                                    Cancelar
+                                                </button>
+                                                <!-- Botón para actualizar el registro -->
+                                                <button type="button" id="actualizarBtn"
+                                                    class="btn btn3 btn-primary ms-4 shadow text18 titillium-web-regular"
+                                                    onclick="botonActualizar()">
+                                                    Actualizar
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     </main>
     <footer id="footer"></footer>
     <!-- *Llamada a las hojas de estilos del framework e iconos -->
