Trabajo del filtro del buscador

--- a/vistas/privado/pedidos.html
+++ b/vistas/privado/pedidos.html
@@ -70,7 +70,7 @@
                                             <div class="col-lg-10 col-md-8">
                                                 <div class="search-container me-5">
                                                     <input type="search" class="form-control" name="search"
-                                                        placeholder="Buscar" id="buscadorInputPedidos" required>
+                                                        placeholder="Buscar....." id="buscadorInputPedidos" required>
                                                     <span class="search-icon"><i class="bi bi-search"></i></span>
                                                     <span class="clear-icon" onclick="clearSearch()"><i
                                                             class="bi clear-icon"></i></span>
