--- a/vistas/publico/buscador.html
+++ b/vistas/publico/buscador.html
@@ -24,6 +24,7 @@ TODO importante // realtando algo
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- *Llamada a las hojas de estilos propios de css -->
     <link href="../../recursos/estilos/fuentes.css" rel="stylesheet">
     <link href="../../recursos/estilos/publico/plantilla.css" rel="stylesheet">
@@ -61,28 +62,60 @@ TODO importante // realtando algo
                 </div>
             </div>
             <!--Contenedor del buscador y resultados-->
-            <div class="col-log-12 d-flex flex-row justify-content-center align-items-center mt-5 mb-4">
-                <!--Contenedor del filtro del buscador-->
-                <div class="col-lg-3">
-
-                </div>
-                <!--Contenedor del resultado y select-->
-                <div class="col-lg-9">
-                    <div class="col-lg-12 d-flex flex-column">
-                        <!--Div para el SELECT-->
-                        <div class="col-lg-12 d-flex flex-row justify-content-center align-items-center">
-                            <h6 class="titillium-web col-lg-2 d-flex justify-content-end align-items-center pt-1 me-2">Ordenar por:</h6>
-                            <div class="custom-select col-lg-9">
-                                <select class="form-select" aria-label="Default select example">
-                                    <option selected>Selecciona una opción</option>
-                                    <option value="1">Recientes</option>
-                                    <option value="2">Antiguos</option>
-                                    <option value="3">Lo más comprado</option>
-                                    <option value="3">Mejor calificación</option>
-                                </select>
+            <div class="col-log-12 d-flex flex-column justify-content-center align-items-center mt-5 mb-4">
+                <!--Contenedor de select y buscador-->
+                <div class="col-lg-12 d-flex flex-row justify-content-center align-items-center">
+                    <!--Contenedor del buscador input-->
+                    <div class="col-lg-6">
+                        <div class="col-lg-12">
+                            <div class="search-container me-5">
+                                <input class="form-control" type="search" name="search"
+                                    placeholder="Buscar...." id="buscadorInputZapatos" required>
+                                <span class="search-icon"><i class="bi bi-search"></i></span>
+                                <span class="clear-icon" onclick="clearSearch()"><i
+                                        class="bi clear-icon"></i></span>
                             </div>
                         </div>
-                        <!--Contenedor del buscador-->
+                    </div>
+                    <!--Contenedor del select-->
+                    <div class="col-lg-4">
+                        <div class="col-lg-12 d-flex flex-column">
+                            <!--Div para el SELECT-->
+                            <div class="col-lg-12 d-flex flex-row justify-content-center align-items-center">
+                                <h6
+                                    class="titillium-web col-lg-3 d-flex justify-content-end align-items-center pt-1 me-2">
+                                    Ordenar por:</h6>
+                                <div class="custom-select col-lg-6">
+                                    <select class="form-select" aria-label="Default select example">
+                                        <option selected>Selecciona una opción</option>
+                                        <option value="1">Recientes</option>
+                                        <option value="2">Antiguos</option>
+                                        <option value="3">Lo más comprado</option>
+                                        <option value="3">Mejor calificación</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--Contenedor del filtro del buscador-->
+                <div class="col-lg-10 d-flex justify-content-center align-items-center">
+                    <div class="col-lg-3 d-flex flex-column align-items-center justify-content-center">
+                        <!--Filtros-->
+                        <div class="col-lg-12 contendorFiltroHeader d-flex flex-row align-items-center pt-2 ps-1">
+                            <div class="col-lg-6">
+                                <h4 class="titillium-web color-5blue">FILTROS</h4>
+                            </div>
+                            <div class="col-lg-6 pb-2">
+                                <div class="col-lg-12 d-flex justify-content-end">
+                                    <span class="x-icon" onclick=""><i class="bi bi-x"></i></span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--Contenedor del resultado y select-->
+                    <div class="col-lg-9">
+                        <!--Contenedor del resultado de las cardse2-->
                         <div class="col-lg-12">
 
                         </div>
